syntax = "proto3";

option csharp_namespace = "RedflyGrpcAuthServiceClient";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc TestData (TestDataRequest) returns (TestDataResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message TestDataRequest {}

message TestDataResponse {
    string message = 1;
}